# car

./: .gitmodules  50-gps.rules  Makefile  alerts.yml  build.sh  car.drawio  chrony.conf  cmdline.txt  config.txt  dnsmasq.conf  docker-compose.yml  external.desc  install.sh  prometheus.yml  qemu.txt  rfcomm  rfcomm.service
alert-indicator/: Containerfile  README.md  pyproject.toml
alert-indicator/src/alert_indicator/: __main__.py
board/rootfs-overlay/etc/default/: gpsd
br-external/: external.desc
br-external/board/: config.txt
br-external/board/rootfs-overlay/etc/: chrony.conf
br-external/board/rootfs-overlay/etc/modules-load.d/: gps.conf
br-external/configs/: car_defconfig
br-external/rootfs-overlay/etc/: dnsmasq.conf  hostapd.conf
br-external/rootfs-overlay/etc/systemd/network/: 10-wlan0.network
br-external/rootfs-overlay/etc/systemd/system/: btattach.service  dnsmasq.service  hostapd.service
br-external/rootfs-overlay/etc/udev/rules.d/: 50-gps.rules
br-external/rootfs-overlay/root/.ssh/: authorized_keys
br-external/rootfs-overlay/srv/: docker-compose.yml  start.sh
configs/: car_defconfig
default/: gpsd
etc/: dhcpcd.conf  dnsmasq.conf  hostapd.conf
hardware/: power.kicad_pro  power.kicad_sch  power.kicad_sch-bak
modules-load.d/: gps.conf
rpi/: #auto_saved_files#  rpi.kicad_pcb  rpi.kicad_prl  rpi.kicad_pro  rpi.kicad_sch
systemd/network/: 20-wifi.network
systemd/system/: rfcomm.service
